--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,75 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #fbf3eb;
+  --foreground: #32302e;
+  --lightgray: #dddddd; 
+  --default-text-color: #32302e;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --color-lightgray: var(--lightgray);
+  --font-sans: var(--font-instrument-serif);
+  --font-mono: var(--font-instrument-serif);
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: var(--background);
+  font-family: "Raleway", Arial, Helvetica, sans-serif;
+  color: var(--default-text-color);
+  opacity: 0;
+  animation: fade-in-down 2s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+}
+
+body::before {
+  content: "";
+  position: fixed;
+  inset: 0;
+  z-index: -1;
+  background-image: url(WFDbackground.png);
+  background-repeat: no-repeat;
+  background-position: fixed;
+  background-size: cover;
+  opacity: 0;
+  animation: fade-in-down 2s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+}
+
+a {
+  text-decoration: underline;
+  color: blue
+}
+
+h1 {
+  font-size: 10vw;
+  font-style: italic;
+  font-family: "Instrument Serif", Arial, Helvetica, sans-serif;
+}
+
+h3 {
+  font-size: 2vw;
+  font-weight: bold;
+}
+
+@keyframes fade-in-down {
+  0% {
+    opacity: 0;
+    transform: translateY(-40px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fade-in-down-with-delay {
+  0% {
+    opacity: 0;
+    transform: translateY(-40px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
