--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,14 +3,30 @@
 :root {
   --background: #fbf3eb;
   --foreground: #32302e;
-  --lightgray: #dddddd; 
+  --chatbox-background: #ffffff;
+  --submit-background: #ebe6e7;
+  --submit-hover: #d1d5dc;
+  --response-background: #fbf9fa;
   --default-text-color: #32302e;
+}
+
+[data-theme="dark"] {
+  --background: #32302e;
+  --foreground: #fbf3eb;
+  --chatbox-background: #000000;
+  --submit-background: #364153;
+  --submit-hover: #4a5565;
+  --response-background: #22272c;
+  --default-text-color: #fbf3eb;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --color-lightgray: var(--lightgray);
+  --color-chatbox-background: var(--chatbox-background);
+  --color-submit-background: var(--submit-background);
+  --color-submit-hover: var(--submit-hover);
+  --color-response-background: var(--response-background);
   --font-sans: var(--font-instrument-serif);
   --font-mono: var(--font-instrument-serif);
 }
@@ -28,7 +44,7 @@ body::before {
   position: fixed;
   inset: 0;
   z-index: -1;
-  background-image: url(WFDbackground.png);
+  background-image: url(/WFDbackground.png);
   background-repeat: no-repeat;
   background-position: fixed;
   background-size: cover;
@@ -72,4 +88,8 @@ h3 {
     opacity: 1;
     transform: translateY(0);
   }
+}
+
+[data-theme="dark"] img.dark-invert {
+  filter: invert(1);
 }
