--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,11 @@
   --submit-hover: #d1d5dc;
   --response-background: #fbf9fa;
   --default-text-color: #32302e;
+  --body-font: "Raleway", Arial, Helvetica, sans-serif;
+  --title-font: "Instrument Serif", Arial, Helvetica, sans-serif;
+  --title-font-size: 10vw;
+  --background-image-url: url(/WFDbackground.png);
+  --background-image-animation: fade-in-down 2s cubic-bezier(0.4, 0, 0.2, 1) forwards;
 }
 
 [data-theme="dark"] {
@@ -20,6 +25,14 @@
   --default-text-color: #fbf3eb;
 }
 
+[data-mode="party"] {
+  --body-font: "Lora",Arial, Helvetica, sans-serif;
+  --title-font: "Chivo", Arial, Helvetica, sans-serif;
+  --title-font-size: 8vw;
+  --background-image-url: url(/dots-bg.png);
+  --background-image-animation: pulse-bg 180s ease-in-out infinite;
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -29,11 +42,13 @@
   --color-response-background: var(--response-background);
   --font-sans: var(--font-instrument-serif);
   --font-mono: var(--font-instrument-serif);
+  --body-font: var(--body-font);
+  --title-font: var(--title-font);
 }
 
 body {
   background-color: var(--background);
-  font-family: "Raleway", Arial, Helvetica, sans-serif;
+  font-family: var(--body-font);
   color: var(--default-text-color);
   opacity: 0;
   animation: fade-in-down 2s cubic-bezier(0.4, 0, 0.2, 1) forwards;
@@ -44,12 +59,12 @@ body::before {
   position: fixed;
   inset: 0;
   z-index: -1;
-  background-image: url(/WFDbackground.png);
+  background-image: var(--background-image-url);
   background-repeat: no-repeat;
   background-position: fixed;
   background-size: cover;
   opacity: 0;
-  animation: fade-in-down 2s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+  animation: var(--background-image-animation);
 }
 
 a {
@@ -58,9 +73,9 @@ a {
 }
 
 h1 {
-  font-size: 10vw;
+  font-size: var(--title-font-size);
   font-style: italic;
-  font-family: "Instrument Serif", Arial, Helvetica, sans-serif;
+  font-family: var(--title-font);
 }
 
 h3 {
@@ -92,4 +107,15 @@ h3 {
 
 [data-theme="dark"] img.dark-invert {
   filter: invert(1);
+}
+
+@keyframes pulse-bg {
+  0%, 100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  50% {
+    opacity: 0.8;
+    transform: scale(2);
+  }
 }
